--- a/esjs/Makefile.in
+++ b/esjs/Makefile.in
@@ -244,8 +244,8 @@ esjs_SOURCES = \
 	src/string.cpp \
 	include/esjs.h include/value.h include/interface.h include/smartptr.h
 
-@APPLE_FALSE@@POSIX_TRUE@LDADD = ../os/libes++/libes++.a ../os/kernel/libeskernel.a ../os/libes++/libes++.a -lpcreposix -lpcre -lrt -lX11
-@APPLE_TRUE@@POSIX_TRUE@LDADD = ../os/libes++/libes++.a ../os/kernel/libeskernel.a ../os/libes++/libes++.a -lpcreposix -lpcre
+@APPLE_FALSE@@POSIX_TRUE@LDADD = ../os/libes++/libes++.a ../os/kernel/libeskernel.a ../os/libes++/libes++.a -lpcreposix -lpcre -lrt -lglut -lGLU -lGL -lXmu -lXi -lXext -lX11 -lcairo
+@APPLE_TRUE@@POSIX_TRUE@LDADD = ../os/libes++/libes++.a ../os/kernel/libeskernel.a ../os/libes++/libes++.a -lpcreposix -lpcre -lglut -lGLU -lGL -lXmu -lXi -lXext -lX11 -lcairo
 @ES_TRUE@LDADD = ../os/libes++/libes++.a -lpcreposix -lpcre
 @POSIX_TRUE@esjs_CXXFLAGS = -D YYERROR_VERBOSE
 @POSIX_TRUE@valueptr_SOURCES = src/valueptr.cpp
